--- a/CollaborationBoard/Web.config
+++ b/CollaborationBoard/Web.config
@@ -23,12 +23,15 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <httpHandlers>
-      <add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core" />
+      <add type="dotless.Core.LessCssHttpHandler ,dotless.Core" validate="false" path="*.LESS" verb="*" />
     </httpHandlers>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
-    <modules>
+    <staticContent>
+      <mimeMap fileExtension=".less" mimeType="text/css" />
+    </staticContent>
+    <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthenticationModule" />
     </modules>
     <handlers>
@@ -69,5 +72,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <dotless minifyCss="false" cache="true" web="false" />
+  <dotless minifyCss="false" cache="false" />
 </configuration>
