--- a/CollaborationBoard/CollaborationBoard.csproj
+++ b/CollaborationBoard/CollaborationBoard.csproj
@@ -186,6 +186,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\App\drawManager.js" />
     <Content Include="Scripts\Common\common.js" />
     <Content Include="Scripts\App\main.js" />
     <Content Include="Scripts\bootstrap.js" />
