implemented canvas dragging

--- a/CollaborationBoard/CollaborationBoard.csproj
+++ b/CollaborationBoard/CollaborationBoard.csproj
@@ -187,7 +187,8 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\App\drawManager.js" />
-    <Content Include="Scripts\Common\common.js" />
+    <Content Include="Scripts\Common\logger.js" />
+    <Content Include="Scripts\Common\misc.js" />
     <Content Include="Scripts\App\main.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
