--- a/CollaborationBoard/CollaborationBoard.csproj
+++ b/CollaborationBoard/CollaborationBoard.csproj
@@ -172,18 +172,18 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\NewBoardModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\SyncDownModel.cs" />
-    <Compile Include="Models\SyncUpModel.cs" />
+    <Compile Include="Models\SyncResponseModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="Scripts\App\actionGroup.js" />
     <Content Include="Scripts\App\sync.js" />
+    <Compile Include="Source\Actions\ActionGroup.cs" />
+    <Compile Include="Source\Actions\LineCollection.cs" />
+    <Compile Include="Source\Actions\Message.cs" />
     <Compile Include="Source\Board.cs" />
-    <Compile Include="Source\BoardAction.cs" />
-    <Compile Include="Source\DrawAction.cs" />
     <Compile Include="Source\BoardManager.cs" />
     <Compile Include="Source\Extensions.cs" />
     <Compile Include="Source\GenericServerError.cs" />
     <Compile Include="Source\Line.cs" />
-    <Compile Include="Source\MessageAction.cs" />
     <Compile Include="Source\Point.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
