--- a/CollaborationBoard/packages.config
+++ b/CollaborationBoard/packages.config
@@ -4,13 +4,17 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="dotless" version="1.4.1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
-  <package id="jQuery" version="1.10.2" targetFramework="net45" />
+  <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="2.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.2" targetFramework="net45" />
