--- a/CollaborationBoard/packages.config
+++ b/CollaborationBoard/packages.config
@@ -5,6 +5,7 @@
   <package id="dotless" version="1.4.1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="1.3.7" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.0.0" targetFramework="net45" />
@@ -32,5 +33,6 @@
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="signalr.TypeScript.DefinitelyTyped" version="0.1.5" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
