--- a/CollaborationBoard/CollaborationBoard.csproj
+++ b/CollaborationBoard/CollaborationBoard.csproj
@@ -180,13 +180,10 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\NewBoardModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Hubs\BoardHub.cs" />
+    <Compile Include="Source\BoardHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Source\Board.cs" />
-    <Compile Include="Source\BoardManager.cs" />
     <Compile Include="Source\Extensions.cs" />
     <Compile Include="Source\GenericServerError.cs" />
-    <Compile Include="Source\SocketUser.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -198,12 +195,12 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\App\boardManager.js" />
-    <Content Include="Scripts\Common\logger.js" />
-    <Content Include="Scripts\Common\misc.js" />
+    <TypeScriptCompile Include="Scripts\Common\misc.ts" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\App\drawManager.js" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
+    <Content Include="Scripts\Common\misc.js" />
     <Content Include="Scripts\jquery-2.1.1.js" />
     <Content Include="Scripts\jquery-2.1.1.min.js" />
     <Content Include="Scripts\jquery-2.1.1.min.map" />
