--- a/CollaborationBoard/CollaborationBoard.csproj
+++ b/CollaborationBoard/CollaborationBoard.csproj
@@ -185,10 +185,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\BoardManager.cs" />
     <Compile Include="Source\DrawState.cs" />
+    <Compile Include="Source\Draw\Circle.cs" />
     <Compile Include="Source\Draw\Line.cs" />
     <Compile Include="Source\Draw\Point.cs" />
     <Compile Include="Source\Extensions.cs" />
     <Compile Include="Source\GenericServerError.cs" />
+    <Compile Include="Source\RequestContext.cs" />
     <Compile Include="Source\User.cs" />
     <Compile Include="Source\UserManager.cs" />
     <Compile Include="Startup.cs" />
