--- a/CollaborationBoard/packages.config
+++ b/CollaborationBoard/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="dotless" version="1.4.1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
+  <package id="fabricjs.TypeScript.DefinitelyTyped" version="0.9.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="1.3.7" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
