added error logging using exceptionless service and moved that configuration into a private file

--- a/CollaborationBoard/packages.config
+++ b/CollaborationBoard/packages.config
@@ -4,6 +4,8 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="dotless" version="1.4.1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
+  <package id="Exceptionless" version="1.5.2092" targetFramework="net45" />
+  <package id="Exceptionless.Mvc" version="1.5.2092" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="1.3.7" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
