changed authentication to use sessionID and not to store passwords in cookies

--- a/CollaborationBoard/CollaborationBoard.csproj
+++ b/CollaborationBoard/CollaborationBoard.csproj
@@ -198,6 +198,7 @@
     </Compile>
     <Compile Include="Models\BoardModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
+    <Compile Include="Source\AuthManager.cs" />
     <Compile Include="Source\Board.cs" />
     <Compile Include="Source\BoardHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
