improved chat system by adding notifications for users connecting/disconnecting and adding a userinfo class to the client so that the name/color could be kept track of

--- a/CollaborationBoard/CollaborationBoard.csproj
+++ b/CollaborationBoard/CollaborationBoard.csproj
@@ -239,6 +239,7 @@
     <TypeScriptCompile Include="Scripts\App\message.ts" />
     <TypeScriptCompile Include="Scripts\App\textEntity.ts" />
     <TypeScriptCompile Include="Scripts\App\point.ts" />
+    <TypeScriptCompile Include="Scripts\App\userInfo.ts" />
     <TypeScriptCompile Include="Scripts\Common\misc.ts" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
