renamed variables to stop being dependent on katex as the latex provider, and added several comments to clarify the purpose of some variables

--- a/CollaborationBoard/CollaborationBoard.csproj
+++ b/CollaborationBoard/CollaborationBoard.csproj
@@ -299,7 +299,7 @@
     <Content Include="Scripts\_references.js" />
     <Content Include="Views\Shared\BoardError.cshtml" />
     <Content Include="Views\Board\Board.cshtml" />
-    <None Include="Views\Shared\KatexMessageModal.cshtml" />
+    <None Include="Views\Shared\LatexMessageModal.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
