moved behavior out of the too object, and made lines thinner

--- a/CollaborationBoard/CollaborationBoard.csproj
+++ b/CollaborationBoard/CollaborationBoard.csproj
@@ -226,12 +226,14 @@
     <TypeScriptCompile Include="Scripts\App\boardSnapshot.ts" />
     <TypeScriptCompile Include="Scripts\App\chat.ts" />
     <TypeScriptCompile Include="Scripts\App\cursor.ts" />
-    <TypeScriptCompile Include="Scripts\App\drawTool.ts" />
+    <TypeScriptCompile Include="Scripts\App\drawBehavior.ts" />
+    <TypeScriptCompile Include="Scripts\App\tool.ts" />
     <TypeScriptCompile Include="Scripts\App\entity.ts" />
     <TypeScriptCompile Include="Scripts\App\entityCollection.ts" />
     <TypeScriptCompile Include="Scripts\App\message.ts" />
     <TypeScriptCompile Include="Scripts\App\textEntity.ts" />
     <TypeScriptCompile Include="Scripts\App\point.ts" />
+    <TypeScriptCompile Include="Scripts\App\toolBehavior.ts" />
     <TypeScriptCompile Include="Scripts\App\userInfo.ts" />
     <TypeScriptCompile Include="Scripts\Common\misc.ts" />
     <Content Include="Scripts\bootstrap.js" />
