removed useless getters and setters which were cluttering code

--- a/CollaborationBoard/CollaborationBoard.csproj
+++ b/CollaborationBoard/CollaborationBoard.csproj
@@ -231,6 +231,7 @@
     <TypeScriptCompile Include="Scripts\App\entity.ts" />
     <TypeScriptCompile Include="Scripts\App\entityCollection.ts" />
     <TypeScriptCompile Include="Scripts\App\message.ts" />
+    <TypeScriptCompile Include="Scripts\App\signalRhub.ts" />
     <TypeScriptCompile Include="Scripts\App\textEntity.ts" />
     <TypeScriptCompile Include="Scripts\App\point.ts" />
     <TypeScriptCompile Include="Scripts\App\Behaviors\toolBehavior.ts" />
