Changes to the homepage
Made it possible for the less compiler to compile the site.less file,
and removed everything from the homepage so that it can be built up from
scratch

--- a/CollaborationBoard/Web.config
+++ b/CollaborationBoard/Web.config
@@ -7,8 +7,11 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  </configSections>
   <connectionStrings>
   </connectionStrings>
   <appSettings>
@@ -24,6 +27,7 @@
     <httpRuntime targetFramework="4.5" />
     <httpHandlers>
       <add type="dotless.Core.LessCssHttpHandler ,dotless.Core" validate="false" path="*.LESS" verb="*" />
+      <add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core" />
     </httpHandlers>
   </system.web>
   <system.webServer>
@@ -34,6 +38,7 @@
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthenticationModule" />
     </modules>
+
     <handlers>
       <add name="dotless" path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler,dotless.Core" resourceType="File" preCondition="" />
     </handlers>
@@ -100,5 +105,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <dotless minifyCss="false" cache="false" />
+  <dotless minifyCss="false" cache="true" web="false" />
 </configuration>
