--- a/CollaborationBoard/CollaborationBoard.csproj
+++ b/CollaborationBoard/CollaborationBoard.csproj
@@ -333,6 +333,7 @@
     <Content Include="Views\Password\Login.cshtml" />
     <Content Include="Views\Board\Messenger.cshtml" />
     <None Include="Content\styles.less" />
+    <Content Include="Views\Home\Help.cshtml" />
     <TypeScriptCompile Include="Scripts\App\boardSnapshot.ts" />
     <TypeScriptCompile Include="Scripts\App\chat.ts" />
     <TypeScriptCompile Include="Scripts\App\Behaviors\drawBehavior.ts" />
@@ -405,7 +406,6 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <TypeScriptCompile Include="Scripts\typings\jquery\jquery.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\signalr\signalr.d.ts" />
